0.6.4
-------------------------------------------------------------------------------
 * Properly enable fdatasync(3) if it's found in configure.

0.6.3
-------------------------------------------------------------------------------
 * Removed NetBSD specific code and defines for kernel/standalone.
 * Portability fixes to allow building with the musl C library.

0.6.2
-------------------------------------------------------------------------------
 * Improve performance of prop_xxx_internalize_from_zfile() when plist is
   already uncompressed.
 * When externalizing plists and if fdatasync(2) is available, use it
   rather than fsync(2) which can be expensive some times.

0.6.1
-------------------------------------------------------------------------------
 * Fixed a syntax error in generated pkg-config file.
 * Fixed zlib's decompressor code to work with 1.2.6.
 * Changed zlib's decompressor to process chunks of 8K. This seems to give
   a small performance improvement to many real cases.

0.6.0
-------------------------------------------------------------------------------
 * Synced proplib with NetBSD HEAD, with the following changes:
	- Fixed a segfault in prop_dictionary_equals(3).
	- New interfaces added to prop_{array,dictionary}_util(3):
		* prop_array_set_and_rel()
		* prop_dictionary_set_and_rel()
		* prop_dictionary_get_dict()
	- Markup, typos, etc for the manual pages.

 * New interfaces added to prop_array_util(3):
	* prop_array_add_cstring()
	* prop_array_add_cstring_nocopy()

0.5.1
-------------------------------------------------------------------------------
 * Added pkg-config support and install a proplib.pc file.

 * Merged stuff from old subversion repo, that re-added the change to emit
   base 10 rather than base 16 for unsigned numbers contributed by Adam Hoka.
  
0.5.0
-------------------------------------------------------------------------------
 * Synced proplib code with NetBSD HEAD, which replaces the red-black tree